fix: Fix rendering error

--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,7 @@
 title: "Cálculo GATE"
 listing:
     sort-ui: false
+    sort: date desc
     filter-ui: false
     type: table
     date-format: "YYYY-MM-DD"
